--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <hmtl>
     <head>
-        <title>El titulo del post</title>
+        <title>Bienvenidos a Hyperblog 2.0</title>
         <link rel="stylesheet" href="./css/estilos.css">
     </head>
 
