Se crea el footer de Blogpost

--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,11 @@
                     no lo eres... por ahora. </p>
                 <p> Suscribete y dale like. </p>
             </div>
+
+            <div id="footer">
+                <h2>Este es el footer</h2>
+                <h3>Suscríbete</h3>
+            </div>
         </div>
     </body>
 </hmtl>
