--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,7 @@
                     a explicar las cosas incre&iacute;bles que se 
                     pueden hacer con ramas.
                 </p>
+                <p><img src="./images/Zorrito Cachorro.jpg" alt="Zorrito Cachorro"></p>
                 <p> Los blogs son la mejor forma de compartir
                     informaci&oacute;n y tus ideas. Mucho mas que ir
                     a conferencias o salir en Youtube. Excepto
