Se modifica el footer y se añade mensaje de Platzi.

--- a/blogpost.html
+++ b/blogpost.html
@@ -29,7 +29,7 @@
             </div>
 
             <div id="footer">
-                <h3>Este es el footer</h3>
+                <h3>Hecho con amor en Platzi &lt;3</h3>
                 <h4>Suscr&iacute;bete</h4>
             </div>
         </div>
